--- a/jtag/flash.cfg
+++ b/jtag/flash.cfg
@@ -17,7 +17,7 @@
 telnet_port 4444
 gdb_port 3333
 
-daemon_startup reset
+#daemon_startup reset
 
 #gdb_flash_program enable
 
@@ -54,7 +54,7 @@ jtag_device 5 0x1 0x1 0x1e
 target cortex_m3 little run_and_init 0
 
 # run_and_halt_time <target> <time_in_ms>
-run_and_halt_time 0 0
+#run_and_halt_time 0 0
 
 # working_area <target> <address> <size> <backup|nobackup>
 working_area 0 0x20000000 0x5000 nobackup
